Fix heading block alignemnt & update style

--- a/frontend/theme/extras/custom.less
+++ b/frontend/theme/extras/custom.less
@@ -70,20 +70,19 @@
 }
 
 .default-heading-size() {
-  width: fit-content;
-  max-width: 940px;
-  cursor: text;
-  font-size: 2.6rem;
-  font-weight: bold;
-  line-height: 1.5;
+  max-width: 940px !important;
+  color: #000;
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 2.4rem;
 }
 .small-heading-size() {
-  width: fit-content;
-  max-width: 940px;
-  cursor: text;
+  max-width: 940px !important;
   font-size: 2rem;
-  font-weight: bold;
-  line-height: 1.5;
+  font-weight: 300;
+  line-height: 1.5rem;
+  cursor: text;
 }
 
 .button-blue() {
